Fixed Grid Gaps Sizes

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -110,8 +110,8 @@ ul {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
   grid-gap: 0.5rem;
-  justify-items: center;
-  align-items: center;
+  //   justify-items: center;
+  //   align-items: center;
   padding: 3rem 0;
   position: relative;
 
@@ -129,8 +129,8 @@ ul {
 
   &__item {
     display: flex;
-    align-self: center;
-    justify-self: center;
+    // align-self: center;
+    // justify-self: center;
   }
 
   &__item--1 {
